<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="score">Score</string>
    <string name="reviews">Reviews</string>
    <string name="popularity">Popularity</string>
    <string name="synopsis">Synopsis</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="movie_poster">Movie poster</string>
    <string name="movie_votes">%d Votes</string>
    <string name="movie_budget">%d$</string>
    <string name="movie_runtime">%1$dh  %2$dmin</string>
    <string name="movie_runtime_image">Movie runtime image</string>
    <string name="storyline">Storyline</string>
    <string name="tagline">Tagline:</string>
    <string name="budget">Budget:</string>
    <string name="premiere">Premiere:</string>
    <string name="about">About</string>
    <string name="homepage">Home Page:</string>
    <string name="revenue">Revenue:</string>
    <string name="retry">Retry</string>
    <string name="error_movie_load_msg">Unable to load movies. Check your internet connection</string>
    <string name="user_reviews">User Reviews</string>
    <string name="see_more"><u>See more</u></string>
    <string name="expanding_arrow">Expanding arrow</string>
    <string name="reviewer_avatar">Reviewer Avatar</string>
    <string name="no_review">There are no reviews yet</string>
    <string name="error_msg">Some error happened. Retry later</string>
    <string name="now_playing_movie">Now Playing</string>
    <string name="popular_movie">Popular</string>
    <string name="top_rated_movie">Top Rated</string>
    <string name="search">Search</string>
    <string name="search_fragment_filler">Type movie name you want to find</string>
    <string name="no_movie_found">No movie found</string>
    <string name="no_movie_found_icon">no movie found icon</string>
    <string name="no_actors_info">No Actors info</string>
    <string name="no_info_filler">-</string>
    <string name="no_storyline">No storyline</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="switch_layout_type_icon">Switch layout type icon</string>
    <string name="movie_title">movie title</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="auto">Auto</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="set_up_account_data">Set up account data</string>
    <string name="password">Password</string>
    <string name="user_icon">user icon</string>
    <string name="logout">Logout</string>
    <string name="add_to_favorite_icon">add to favorite icon</string>
    <string name="require_login_msg">You need to login first</string>
    <string name="favorite">Favorite</string>
    <string name="rated">Rated</string>
    <string name="watchlist">Watchlist</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="change_movie_rating">Change rating</string>
    <string name="rate_movie">Rate</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="ask_for_login">You need to login first</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="login_successful">Login successful</string>
    <string name="invalid_user_credentials">Invalid login and/or password</string>
</resources>